fixed search btn spacing

--- a/frontend/src/components/SearchBar/Search.css
+++ b/frontend/src/components/SearchBar/Search.css
@@ -41,7 +41,7 @@
 
 #search-button {
   position: relative;
-  right: 14%;
+  right: 3em;
   border-radius: 50%;
   height: 30px;
   width: 30px;
